--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -581,12 +581,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.3.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -634,12 +629,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.4.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -687,12 +677,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.5.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -740,12 +725,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.6.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -793,12 +773,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.7.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            #- export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -846,12 +821,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.8.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *onetime_final
     on_success:
       script:
         - *final_on_success_template
