--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1295,12 +1295,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.3.2"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1348,12 +1343,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.4.1"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1401,12 +1391,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.5.1"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1454,12 +1439,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.6.1"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1507,12 +1487,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.7.3"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1560,12 +1535,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.8.2"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1613,12 +1583,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.10.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1666,12 +1631,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.1.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1719,12 +1679,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.2.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1772,12 +1727,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.3.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1825,12 +1775,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.4.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1878,12 +1823,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.5.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1931,12 +1871,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.6.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -1984,12 +1919,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.7.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            #- export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *always_final
     on_success:
       script:
         - *final_on_success_template
@@ -2037,12 +1967,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.8.4"
           script:
-            - *final_task_setup_template
-            # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
-            # first time the image is getting built, there will be no previous version, so uncomment
-            # this line to override the behavior and build on top of patch image instead.
-            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
-            - *final_task_build_template
+            - *onetime_final
     on_success:
       script:
         - *final_on_success_template
@@ -2051,7 +1976,6 @@ jobs:
         - *final_on_failure_template
 
 #### AWS
-
   - name: baseami_prep
     type: runSh
     triggerMode: parallel
