--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -126,3 +126,16 @@ final_on_success_template: &final_on_success_template
 
 final_on_failure_template: &final_on_failure_template
   - cat output.txt
+
+
+onetime_final_temp: &onetime_final
+  # NOTE: SOURCE_IMAGE_FAMILY will be set to the previous version of this job. If this is the
+  # first time the image is getting built, there will be no previous version, so uncomment
+  # this line to override the behavior and build on top of patch image instead.
+  - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
+  - *final_task_setup_template
+  - *final_task_build_template
+
+always_final_temp: &always_final
+  - *final_task_setup_template
+  - *final_task_build_template
