--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -115,7 +115,22 @@ resources:
     pointer:
       sourceName: "drydock/c7golall"
     seed:
-      versionName: master  
+      versionName: master
+  
+  - name: c7cloall_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7cloall
+      branch: master
+
+  - name: c7cloall_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7cloall"
+    seed:
+      versionName: master
 
 jobs:
   - name: c7_x8664_build
@@ -283,7 +298,31 @@ jobs:
       - OUT: c7golall_dd_img
     on_success:
       script:
-        - *build_ship_assets_on_success        
+        - *build_ship_assets_on_success
+     
+  - name: c7cloall_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    runtime:
+      nodePool: c7_cache
+    steps:
+      - IN: c7cloall_dd_repo
+      - IN: c7all_dd_img
+      - TASK:
+          name: c7cloall_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - RES_REPO: "c7cloall_dd_repo"
+                - IMG_OUT: "c7cloall_dd_img"
+          script:
+            - *build_ship_assets
+      - OUT: c7cloall_dd_img
+    on_success:
+      script:
+        - *build_ship_assets_on_success
 
 ####
   - name: c7_x8664_tag
@@ -467,6 +506,32 @@ jobs:
     on_success:
       script:
         - *tag_ship_assets_on_success
+        
+  - name: c7cloall_x8664_tag
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    integrations:
+      - ship_ssh
+    steps:
+      - IN: prod_release
+      - IN: c7cloall_dd_repo
+        switch: off
+      - IN: c7cloall_dd_img
+        switch: off
+      - TASK:
+          name: c7cloall_tag
+          runtime:
+            options:
+              env:
+                - RES_VER: "prod_release"
+                - RES_IMG: "c7cloall_dd_img"
+                - RES_REPO: "c7cloall_dd_repo"
+          script:
+            - *tag_ship_assets
+    on_success:
+      script:
+        - *tag_ship_assets_on_success
 
 ######################### GCP CentOS 7 Image ##################################
   - name: prep_c7_x8664_gce_img
@@ -480,6 +545,7 @@ jobs:
       - IN: c7pytall_dd_img
       - IN: c7nodall_dd_img
       - IN: c7golall_dd_img
+      - IN: c7cloall_dd_img
       - IN: node_file_pack
       - IN: buildami_repo
         switch: off
@@ -1009,6 +1075,7 @@ jobs:
       - IN: c7pytall_dd_img
       - IN: c7javall_dd_img
       - IN: c7golall_dd_img
+      - IN: c7cloall_dd_img
       - IN: node_file_pack
       - IN: cexec_file_pack
       - IN: u16reqProc_x8664_build
@@ -1062,6 +1129,7 @@ jobs:
       - IN: c7javall_x8664_tag
       - IN: c7cppall_x8664_tag
       - IN: c7golall_x8664_tag
+      - IN: c7cloall_dd_img
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
